# streamsight-studio

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
streamsight-backend/: Dockerfile  pyproject.toml
streamsight-backend/src/streamsight_backend/: main.py
streamsight-backend/src/streamsight_backend/api/: app.py
streamsight-backend/src/streamsight_backend/config/: setting.py
streamsight-backend/src/streamsight_backend/db/: connection.py  schema.py  seed.py
streamsight-backend/src/streamsight_backend/router/: __init__.py  algorithm_router.py  auth_google_router.py  auth_router.py  dataset_router.py  metric_router.py  stream_router.py
streamsight-backend/src/streamsight_backend/services/: auth.py
streamsight-studio-backend/: .dockerignore  Dockerfile  pyproject.toml
streamsight-studio-backend/src/streamsight_studio_backend/: main.py
streamsight-studio-backend/src/streamsight_studio_backend/api/: app.py
streamsight-studio-backend/src/streamsight_studio_backend/config/: __init__.py  log.py  setting.py
streamsight-studio-backend/src/streamsight_studio_backend/db/: connection.py  schema.py  seed.py  trigger.py
streamsight-studio-backend/src/streamsight_studio_backend/router/: __init__.py  algorithm_router.py  auth_google_router.py  auth_router.py  dataset_router.py  evaluator_router.py  metric_router.py  stream_router.py
streamsight-studio-backend/src/streamsight_studio_backend/schemas/: stream.py
streamsight-studio-backend/src/streamsight_studio_backend/services/: auth.py  evaluator.py
streamsight-studio-frontend/: .gitignore  Dockerfile  Dockerfile.dev  index.html  (+5 more)
(+63 files in other folders)
